2009-03-23  Hubert Figuiere  <hub@figuiere.net>

	* libxml++/parsers/textreader.cc: severity_ was not initialised
	at construction time.

2.26.0:

2009-03-16  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Increased version number to match GNOME 2.26.

2.24.3:

2009-03-02  Armin Burgmeier  <armin@openismus.com>

	* libxml++/validators/validator.h:
	* libxml++/parsers/parser.h: Removed the vsnprintf #define on Windows.
	This could conflict with another define otherwise. Both MSVC and MinGW
	have vsnprintf (without underscore) as well, and I verified libxml++
	still compiles in both. If we still need the definition for some
	reason, then we should re-add it into the source files, so that other
	libraries don't conflict with our definition.

2009-01-09  Stef Walter  <stef-list@memberwebs.com>

	* libxml++/parsers/textreader.[h|cc]: Add setup_exceptions(), setting 
	the on_libxml_error() callback, and call it from the constructors.
	check_for_exceptions(): Actually check some member variables and throw an 
	exception if necessary.
	This should fix bug #348006.
	It breaks ABI because it adds member variables, but we decided that is 
	OK because nobody could actually be using this class seriously before 
	now because it had no error checking.

2.24.2:

2008-12-20  Armin Burgmeier  <armin@openismus.com>

	* libxml++/schema.cc (set_document): Set embedded_doc_ according to
	the embed parameter instead of always setting it to false, so that we
	actually release the document in release_underlying().
	(release_underlying): Free the schema in all cases, also when the
	document was not embedded, to avoid a memory leak.

	* libxml++/validators/schemavalidator.cc (parse_file, parse_memory,
	parse_document): Make sure not to leak the xmlSchemaParserCtxtPtr in
	case of an exception. Bug #563321, Arjan Franzen.

2008-12-18  Armin Burgmeier  <armin@openismus.com>

	* win32_msvc6/:
	* Makefile.am:
	* configure.in: Removed outdated MSVC6 project.

2.24.1:
